Correction d'un bug qui empechait les aggresseur d'une aggression contre neutre de gagner des points de déshonneur, correction d'un bug visuel lors de l'aggression d'un percepteur, tous les aggresseurs sont désormais visibles

--- a/src/Codebreak.App.Website/Content/css/chat.css
+++ b/src/Codebreak.App.Website/Content/css/chat.css
@@ -10,7 +10,6 @@
     border-bottom: 1px solid lightgray;
     margin-top: 0px;
     padding-top: 10px;
-    padding-bottom: 10px;
 }
 
 .chat-server-message {
